--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,16 @@ readme = true
 repository = "https://github.com/SignalWalker/melia"
 license = "AGPL-3.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-tokio = { version = "^1", features = ["full"] }
-axum = { version = "^0.6", features = [ "http2", "macros", "headers" ] }
-hyper = { version = "^0.14", features = [ "http1", "http2", "server", "runtime", "tcp", "stream" ] }
+tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
+tokio-stream = { version = "^0.1", features = ["net"] }
+futures-util = { version = "^0.3" }
+# axum = { version = "^0.6", features = [ "http1", "http2", "macros", "headers" ] }
+tower = { version = "^0.4", features = ["full"] }
+hyper = { version = "1.0.0-rc.3", features = [ "http1", "http2", "server" ] }
+http-body = "1.0.0-rc.2"
+http-body-util = { version = "0.1.0-rc.2" }
+bytes = "^1"
 
 clap = { version = "^4.0", features = [ "derive", "env" ] }
 
@@ -29,18 +33,19 @@ time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }
 lazy_static = "^1"
 
 # for finding XDG directories
-directories = "^4"
+directories = "^5"
 
 # serialization/deserialization
 serde = { version = "^1" }
 serde_derive = "^1"
 ## configuration
-toml = "^0.5"
+toml = "^0.7"
 
 # systemd
 systemd = {optional = true, version = "^0.10" }
-libsystemd = { optional = true, version = "^0.5" }
+libsystemd = { optional = true, version = "^0.6" }
+libc = {optional = true, version = "^0.2" }
 
 [features]
 default = [ "systemd" ]
-systemd = [ "dep:libsystemd", "dep:systemd" ]
+systemd = [ "dep:libsystemd", "dep:systemd", "dep:libc" ]
